# tailwind-merge-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  publish_to_pypi_manual_bump.yml  publish_to_pypi_no_push.yml  test.yml
tailwind_merge/: __init__.py  core.py
tests/: test_merge.py
